<resources>
    <string name="app_name">Book app</string>
    <string name="action_settings">Settings</string>
    <string name="item_list_fragment_label">Item List</string>
    <string name="item_edit_fragment_label">Item Edit</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must not be empty</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="item_list_fragment">Item list fragment</string>
    <string name="item_edit_fragment">Item edit fragment</string>
    <string name="title">Title</string>
    <string name="pages">Pages</string>
    <string name="sold">Sold</string>
    <string name="release_date">Release date</string>
    <string name="delete">Delete</string>
    <string name="logout">Logout</string>
</resources>